--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter: ^2.3.0
   http: ^0.13.3
   flutter_dotenv: ^5.1.0
+  kartal: ^3.0.0
 
 dev_dependencies:
   flutter_test:
