--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.3
   flutter_dotenv: ^5.1.0
   kartal: ^3.0.0
+  shared_preferences: ^2.0.8
 
 dev_dependencies:
   flutter_test:
