--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+ProjectManagement~9a47ed76af9c97fedee80c535c4b10e51483ba8f
